<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main_constraint_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <ScrollView
        android:id="@+id/main_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraint_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/header_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:textSize="22sp"
                android:gravity="center_horizontal"
                android:fontFamily="sans-serif-black"
                android:textColor="@color/black"
                android:text="@string/header_text"/>

            <TextView
                android:id="@+id/customer_name_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="@id/header_text_view"
                app:layout_constraintTop_toBottomOf="@+id/header_text_view"
                android:layout_marginTop="30dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:textSize="18sp"
                android:gravity="start"
                android:fontFamily="sans-serif-black"
                android:textColor="@color/black"
                android:text="@string/customer_name_text"/>

            <EditText
                android:inputType="text"
                android:id="@+id/customer_name_edit_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@id/customer_name_text_view"
                app:layout_constraintTop_toBottomOf="@+id/header_text_view"
                android:layout_marginTop="20dp"
                android:textSize="18sp"
                android:gravity="start"
                android:fontFamily="sans-serif-black"
                android:textColor="@color/black"
                android:hint="@string/customer_name_hint"
                android:layout_marginStart="10dp"
                android:autofillHints="name" />

            <TextView
                android:id="@+id/customer_email_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="@id/header_text_view"
                app:layout_constraintTop_toBottomOf="@+id/customer_name_text_view"
                android:layout_marginTop="20dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:textSize="18sp"
                android:gravity="start"
                android:fontFamily="sans-serif-black"
                android:textColor="@color/black"
                android:text="@string/customer_email_text"/>

            <EditText
                android:inputType="textEmailAddress"
                android:id="@+id/customer_email_edit_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="@id/customer_name_edit_text"
                app:layout_constraintTop_toBottomOf="@+id/customer_name_edit_text"
                android:textSize="18sp"
                android:gravity="start"
                android:fontFamily="sans-serif-black"
                android:textColor="@color/black"
                android:hint="@string/customer_email_hint"
                android:autofillHints="emailAddress" />

            <TextView
                android:id="@+id/number_of_rooms_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="@id/customer_email_text_view"
                app:layout_constraintTop_toBottomOf="@+id/customer_email_text_view"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:textSize="18sp"
                android:gravity="start"
                android:fontFamily="sans-serif-black"
                android:textColor="@color/black"
                android:text="@string/number_of_rooms_text"/>

            <EditText
                android:id="@+id/number_of_rooms_edit_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@id/number_of_rooms_text_view"
                app:layout_constraintTop_toBottomOf="@+id/customer_email_edit_text"
                android:layout_marginStart="10dp"
                android:textSize="18sp"
                android:gravity="start"
                android:fontFamily="sans-serif-black"
                android:textColor="@color/black"
                android:hint="@string/number_of_rooms_hint"
                android:autofillHints="number"
                android:inputType="number" />

            <TextView
                android:id="@+id/number_of_guests_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="@id/number_of_rooms_text_view"
                app:layout_constraintTop_toBottomOf="@+id/number_of_rooms_text_view"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:textSize="18sp"
                android:gravity="start"
                android:fontFamily="sans-serif-black"
                android:textColor="@color/black"
                android:text="@string/number_of_guests_text"/>

            <EditText
                android:autofillHints="number"
                android:id="@+id/number_of_guests_edit_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@id/number_of_guests_text_view"
                app:layout_constraintTop_toBottomOf="@+id/number_of_rooms_edit_text"
                android:layout_marginStart="10dp"
                android:textSize="18sp"
                android:gravity="start"
                android:fontFamily="sans-serif-black"
                android:textColor="@color/black"
                android:hint="@string/number_of_guests_hint"
                android:inputType="number" />

            <TextView
                android:id="@+id/check_in_date_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="@id/number_of_guests_text_view"
                app:layout_constraintTop_toBottomOf="@+id/number_of_guests_text_view"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:textSize="18sp"
                android:gravity="start"
                android:fontFamily="sans-serif-black"
                android:textColor="@color/black"
                android:text="@string/check_in_date_text"/>

            <DatePicker
                android:id="@+id/check_in_date_date_picker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="@+id/check_in_date_text_view"
                app:layout_constraintTop_toBottomOf="@+id/check_in_date_text_view"
                android:layout_marginTop="10dp"/>

            <TextView
                android:id="@+id/check_out_date_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="@id/number_of_guests_text_view"
                app:layout_constraintTop_toBottomOf="@+id/check_in_date_date_picker"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:textSize="18sp"
                android:gravity="start"
                android:fontFamily="sans-serif-black"
                android:textColor="@color/black"
                android:text="@string/check_out_date_text"/>

            <DatePicker
                android:id="@+id/check_out_date_date_picker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="@+id/check_out_date_text_view"
                app:layout_constraintTop_toBottomOf="@+id/check_out_date_text_view"
                android:layout_marginTop="10dp"/>

            <Button
                android:id="@+id/reservation_search_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/check_out_date_date_picker"
                android:gravity="center"
                android:text="@string/search_text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="30dp"/>



        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>